Fix admin navbar too big btn & adapt @media accordingly

--- a/admin/admin_style.css
+++ b/admin/admin_style.css
@@ -917,7 +917,8 @@ header.scrolled::before {
 
 /*-------media screen-------------*/
 /*------------media screen----------*/
-@media (max-width: 991px) {
+/* @media (max-width: 991px) { */
+@media (max-width: 1136px) {
 	#menu-btn {
 		display: block;
 	}
